Fix CSS scaling on iOS

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -20,6 +20,7 @@ html {
 
 body {
     position: relative;
+    -webkit-text-size-adjust: 100%; // Prevent font scaling in iOS
 }
 
 code {
